[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Utils/Range.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Generators/ObstacleGenerator.gd" type="Script" id=2]

[node name="ObstacleGenerator" type="Node2D"]
script = ExtResource( 2 )

[node name="RangeLeft" parent="." instance=ExtResource( 1 )]

[node name="Begin" parent="RangeLeft" index="0"]
position = Vector2( -12, 44 )

[node name="End" parent="RangeLeft" index="1"]
position = Vector2( -12, 235 )

[node name="RangeRight" parent="." instance=ExtResource( 1 )]

[node name="Begin" parent="RangeRight" index="0"]
position = Vector2( 169, 42 )

[node name="End" parent="RangeRight" index="1"]
position = Vector2( 169, 242 )

[node name="RangeDown" parent="." instance=ExtResource( 1 )]

[node name="Begin" parent="RangeDown" index="0"]
position = Vector2( 7, 264 )

[node name="End" parent="RangeDown" index="1"]
position = Vector2( 154, 264 )

[node name="OursinTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="MalusTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="PowerupTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Instances" type="Node" parent="."]

[connection signal="timeout" from="OursinTimer" to="." method="_on_OursinTimer_timeout"]
[connection signal="timeout" from="MalusTimer" to="." method="_on_MalusTimer_timeout"]
[connection signal="timeout" from="PowerupTimer" to="." method="_on_PowerupTimer_timeout"]

[editable path="RangeLeft"]
[editable path="RangeRight"]
[editable path="RangeDown"]
